@@ -25,6 +25,8 @@ PHP                                                                        NEWS
 - Fixed bug #34299 (ReflectionClass::isInstantiable() returns true for abstract
   classes). (Marcus)
 - Fixed bug #34284 (CLI phpinfo showing html on _SERVER["argv"]). (Jani)
+- Fixed bug #34277 (array_filter() crashes with references and objects).
+  (Dmitry)
 - Fixed bug #34276 (setAttributeNS doesn't work with default namespace). (Rob)
 - Fixed bug #34257 (lib64 not handled correctly in ming extension). (Marcus)
 - Fixed bug #34221 (Compiling xmlrpc as shared fails other parts). (Jani)
